--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -18,7 +18,9 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.6.2",
+    "sweetalert2": "^11.22.0",
     "swiper": "^11.2.8",
     "zustand": "^5.0.5"
   },
