--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.0",
     "swiper": "^11.2.8",
     "zustand": "^5.0.5"
