--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "framer-motion": "^12.19.2",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
